@@ -9,15 +9,12 @@
 import unittest
 
 import blazed_grating, substacks, planarTE, planarTM, VCSEL, SpE, \
-       PhC_splitter
+       PhC_splitter, metal_splitter, expressions, cladding, grating
 
-alltests = unittest.TestSuite((blazed_grating.suite, \
-                               substacks.suite, \
-                               planarTE.suite, \
-                               planarTM.suite, \
-                               VCSEL.suite, \
-                               SpE.suite, \
-                               PhC_splitter.suite))
+alltests = unittest.TestSuite((blazed_grating.suite, substacks.suite, 
+       planarTE.suite, planarTM.suite, VCSEL.suite, SpE.suite,
+       PhC_splitter.suite, metal_splitter.suite, expressions.suite,
+       cladding.suite, grating.suite))
 
 if __name__ == "__main__":
     r = unittest.TextTestRunner()
