@@ -1,3 +1,10 @@
+2002-04-29  Peter Bienstman <Peter.Bienstman@rug.ac.be>
+
+	* metal_splitter.py: New test.
+	* cladding.py: New test.
+	* grating.py: New test.
+	* expressions: New test.
+
 2002-02-13  Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>
 
         * PhC_splitter.py: Update for new Blochsolver.
